Noticed the letter-spacing fix glitching. Should be fixed.

--- a/css/carousel.core.css
+++ b/css/carousel.core.css
@@ -3,7 +3,7 @@
 }
     .carousel ul,
     .carousel li {
-        letter-spacing:     -1ex;
+        letter-spacing:     -4px;
         list-style-type:    none;
         margin:             0;
         padding:            0;
