--- a/css/core.css
+++ b/css/core.css
@@ -1,5 +1,11 @@
-html, body {
-    background: #eee;
+html {
+    background: #ccc;
+    filter:     progid:DXImageTransform.Microsoft.gradient(startColorstr='#999', endColorstr='#ccc');
+    background: #ccc -webkit-gradient(linear, left top, left bottom, from(#999), to(#ccc)) no-repeat;
+    background: #ccc -moz-linear-gradient(top,  #999,  #ccc) no-repeat;
+}
+
+body {
     color:      #666;
     font:       14px/1.4 helvetica, "trebuchet ms", sans-serif;
     padding:    20px;
